# smart-pupillometer

./: .gitignore  LICENSE  README.md  platformio.ini
pupil_detection/: CMakeLists.txt  main.cpp  textable_frame.py  util.py  video_detection.py  video_stream.py
serial_client/: serial_client.py  serial_controller.py
src/: Array.h  color_util.h  config.hpp  demodulator.cpp  demodulator.h  demodulator.hpp  display.cpp  display.h  display.hpp  display_st7735.cpp  display_st7735.h  display_st7735.hpp  displayy.cpp  displayy.h  image.h  image.hpp  main.cpp  serial_server.hpp  signal_processor.hpp  timer.hpp
src/display/: display.cpp  display.hpp  display_st7735.cpp  display_st7735.hpp  screen.hpp
src/util/: Array.h  color_util.h  timer.hpp
src/util/Array/: Array.cpp  ArrayDefinitions.h  ArrayIterator.h
test/: colours.py  demodulator.py  proteus_display.ino
util/: demodulator.py  waveform_renderer.py
